<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AndroidCalculatorMainActivity" android:id="@+id/activity_frm">
    <TextView
            android:text="@string/first_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/firstNumberView"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp" android:layout_marginLeft="72dp" android:layout_marginStart="72dp"/>
    <TextView
            android:text="@string/second_number_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/secondNumberView"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="216dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="72dp" android:layout_marginStart="72dp"/>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="231dp"
            android:layout_height="53dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="60dp" app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textInputLayout">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/firstField"
                android:inputType="number|numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="230dp"
            android:layout_height="59dp"
            android:layout_marginTop="95dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textInputLayout2">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/secondField"
                android:inputType="number|numberDecimal"/>
    </com.google.android.material.textfield.TextInputLayout>
    <Button
            android:text="@string/calculate_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/calculateButton"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="388dp" android:layout_marginLeft="224dp" android:layout_marginStart="224dp"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:id="@+id/resultField"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="320dp" android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:textColor="?attr/colorError" android:enabled="false"/>
    <TextView
            android:text="@string/result_view"
            android:layout_width="73dp"
            android:layout_height="18dp" android:id="@+id/resultView"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="76dp" android:layout_marginStart="76dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="344dp"/>
    <RadioGroup
            android:layout_width="150dp"
            android:layout_height="188dp"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/radioGroup" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultView" android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp" android:layout_marginBottom="16dp">
        <RadioButton
                android:text="@string/radio_addition"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/additionButton"/>
        <RadioButton
                android:text="@string/radio_subtraction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/subtractionButton"/>
        <RadioButton
                android:text="@string/radio_multiplication"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/multiplicationButton"/>
        <RadioButton
                android:text="@string/radio_division"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/divisionButton"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>